# langchain-chainlit-lab

./: README.md  chainlit.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/workflows/: dockerhub-publish.yml  pylint.yml
src/: genocs_dev.py  main.py  saas.py  script.py  script_ita.py
