[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Nocco Giovanni Emanuele"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.325"
langchain-experimental = "0.0.36"
openai = "0.27.8"
chainlit = "0.3.0"
pandas = "1.5.0"
tabulate = "0.9.0"
chromadb = "0.3.23"
matplotlib = "3.7.1"
tiktoken = "0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
