[tool.poetry]
name = "langchain-chainlit-docker-template"
version = "0.1.0"
description = "A template langchain Chainlit App with Docker Deployments"
authors = ["Nocco Giovanni Emanuele"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_chainlit_docker_deployment_template"}]


[tool.poetry.dependencies]
python = "3.11.7"
pyautogen = "0.2.6"
chainlit = "1.0.101"
python-decouple = "3.8"
# tabulate = "0.9.0"
# chromadb = "0.4.22"
# tiktoken = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
